--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "@expo/vector-icons": "^14.0.0",
+    "axios": "^1.6.8",
+    "expo": "^49.0.23",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "i": "^0.3.7",
+    "npm": "^10.5.2",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-animated-loader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
